[package]
name = "diesel-utils"
version = "0.5.0"
authors = ["Pablo Deymonnaz <deymonnaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4"
dotenv = "0.15.0"
r2d2 = "0.8"
anyhow = "1.0"
lazy_static = "1.4"
log = "0.4"
error-utils = { git = "https://github.com/pablodeymo/error-utils", features = [
    "enableactix",
], optional = true }
actix-service = { version = "2", optional = true }

[features]
enableactix = ["error-utils", "actix-service"]
